--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -14,5 +14,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime": "^7.4.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/davidbarna/dev-tools.git",
+    "directory": "packages/babel-preset"
+  },
+  "homepage": "https://github.com/davidbarna/dev-tools/tree/master/packages/babel-preset#readme"
 }
