--- a/packages/babel-preset/package.json
+++ b/packages/babel-preset/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "@soyun/babel-preset",
+  "name": "@dal/babel-preset",
   "version": "0.0.0",
   "main": "babel.config.js",
-  "files": [
-    "babel.config.js"
-  ],
   "dependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
