--- a/packages/build-cli/package.json
+++ b/packages/build-cli/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@soyun/build-cli",
+  "name": "@dal/build-cli",
   "version": "0.0.0",
   "bin": {
-    "syn-build": "./bin/index.js"
+    "dal-build": "./bin/index.js"
   },
   "scripts": {
     "build": "babel-node --extensions .ts src/",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
-    "@soyun/babel-preset": "^0.0.0",
+    "@dal/babel-preset": "^0.0.0",
     "execa": "^1.0.0",
     "read-pkg-up": "^5.0.0",
     "rimraf": "^2.6.3",
