--- a/packages/build-cli/package.json
+++ b/packages/build-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dal/build-cli",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "bin": {
     "dal-build": "./bin/index.js"
   },
@@ -11,11 +11,11 @@
   "dependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
-    "@dal/babel-preset": "^0.0.0",
+    "@babel/node": "^7.2.2",
+    "@dal/babel-preset": "^0.1.0",
     "execa": "^1.0.0",
     "read-pkg-up": "^5.0.0",
-    "rimraf": "^2.6.3",
-    "@babel/node": "^7.2.2"
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@types/node": "^10.14.4",
