--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,8 +12,14 @@
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4"
+  },
+  "peerDependencies": {
+    "eslint": "^5.16.0",
+    "prettier": "^1.17.0",
+    "typescript": "^3.4.5"
   },
   "repository": {
     "type": "git",
